# play-with-taichi

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt
2D-FEM/: main.0.py  main.1.py
3D-FEM/: cuboid.py  main.py  mesh.py
